# rnmi

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  nmi.cpp  nmi.h  rnmi.cpp  rnmi_mx.cpp  zrg.cpp  zrg.h
